--- a/configure/configure.html
+++ b/configure/configure.html
@@ -7,14 +7,14 @@
   <title>Configuración</title>
 
   <!-- jQuery -->
-  <script src="assets/js/jquery-3.7.1.min.js"></script>
+  <script src="../assets/js/jquery-3.7.1.min.js"></script>
 
   <!-- Bootstrap -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+  <script src="../assets/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- Extensions Library (this will be hosted on a CDN eventually) -->
-  <script src="assets/js/tableau.extensions.1.latest.min.js"></script>
+  <script src="../assets/js/tableau.extensions.1.latest.min.js"></script>
 
   <!-- Our extension's code -->
   <script src="./configure.js"></script>
