--- a/slideshow.html
+++ b/slideshow.html
@@ -7,14 +7,14 @@
   <title>Slideshow</title>
 
   <!-- jQuery -->
-  <script src="assets/js/jquery-3.7.1.min.js"></script>
+  <script src="./assets/js/jquery-3.7.1.min.js"></script>
 
   <!-- Bootstrap -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
 
   <!-- Extensions Library (this will be hosted on a CDN eventually) -->
-  <script src="../assets/js/tableau.extensions.1.latest.min.js"></script>
+  <script src="./assets/js/tableau.extensions.1.latest.min.js"></script>
 
   <!-- Our extension's code -->
   <script src="./slideshow.js"></script>
