--- a/slideshow.html
+++ b/slideshow.html
@@ -7,17 +7,17 @@
   <title>Slideshow</title>
 
   <!-- jQuery -->
-  <script src="./assets/js/jquery-3.7.1.min.js"></script>
+  <script src="tableau-demo/assets/js/jquery-3.7.1.min.js"></script>
 
   <!-- Bootstrap -->
-  <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
-  <script src="./assets/js/bootstrap.bundle.min.js"></script>
+  <link href="tableau-demo/assets/css/bootstrap.min.css" rel="stylesheet">
+  <script src="tableau-demo/assets/js/bootstrap.bundle.min.js"></script>
 
   <!-- Extensions Library (this will be hosted on a CDN eventually) -->
-  <script src="./assets/js/tableau.extensions.1.latest.min.js"></script>
+  <script src="tableau-demo/assets/js/tableau.extensions.1.latest.min.js"></script>
 
   <!-- Our extension's code -->
-  <script src="./slideshow.js"></script>
+  <script src="tableau-demo/slideshow.js"></script>
 </head>
 <body style="background-color: #ed1e24">
   <div class="container-fluid h-100">
